Create a new 'evolution' section

--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -39,6 +39,6 @@ testing, and running tests in simulation.
 
 Cardano's smart contract platform seeks to deliver more
 advanced features than any protocol previously developed and will serve as a
-stable and secure platform for the development of enterprise-level DApps. Cardano's democratic governance system, implemented based on [CIP-1694](https://cips.cardano.org/cip/CIP-1694) on-chain governance mechanisms, will enable the project to evolve over time and sustainably fund itself through a visionary treasury system.
+stable and secure platform for the development of enterprise-level DApps. Cardano's democratic governance system, being implemented based on [CIP-1694](https://cips.cardano.org/cip/CIP-1694) on-chain governance mechanisms, will enable the project to evolve over time and sustainably fund itself through a visionary treasury system.
 
 You can read more about Cardano on the [official Cardano website](https://cardano.org/) and watch a summary of Cardano's mission in this [explainer video](https://www.youtube.com/watch?v=l_Nv0-PVrnM/).
