--- a/docs/06-cardano-testnets/03-getting-started.mdx
+++ b/docs/06-cardano-testnets/03-getting-started.mdx
@@ -3,10 +3,6 @@ title: Getting started with Cardano testnets
 metaTitle: Getting started with the Cardano testnets
 ---
 
-> Note that the **Cardano testnet** is no longer recommended for testing
-> purposes. The community is encouraged to use preview and pre-production
-> testnet environments explained below.
-
 To get started and join Cardano testnets, you should install and configure the
 Cardano node and the command line interface (CLI), configure your testing
 environment, and generate payment keys and addresses. Note, that you will also
@@ -39,7 +35,7 @@ choice of the best-matching method depends on the operating system, level of
 technical expertise, and personal preferences.
 
 Building the node using Nix is the recommended method, as this is what IOG’s
-internal development teams use and is considered the most reliable.
+internal development teams use and consider the most reliable.
 
 For more information on the various options, see:
 
@@ -56,55 +52,16 @@ network has experienced thus far.
 
 These configurations tell the node how to handle the updates that come with each
 era (ie, Mary, Alonzo, Babbage, etc). Each new era (implemented using the
-[hard fork combinator technology](https://docs.cardano.org/learn/about-hard-forks))
+hard fork combinator technology)
 introduces protocol changes and new ledger rules. While old configurations are
 still valid, the new configurations and features offer new rules and
-improvements. In the Babbage era, for example, Plutus v2 scripts work better
-than Plutus v1 scripts. Plutus v1 scripts, however, are still supported.
+improvements. In the Babbage era, for example, Plutus V2 scripts work better
+than Plutus V1 scripts. Plutus V1 scripts, however, are still supported.
 
 For more details, see:
 
 - [Understanding configuration files](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/getting-started/understanding-config-files.md)
 - [Configuring the node using YAML](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/reference/configuring-a-node-using-yaml.md)
-
-## Environments
-
-### Early-stage testing networks
-
-**Devnet**
-
-Devnet is the network for early involvement and functionality testing before a
-release candidate is mature. It is meant for projects such as DApps that wish to
-explore new features as soon as they are available.
-
-[**Devnet configurations**](https://book.world.dev.cardano.org/environments.html#vasil-dev)
-
-**Preview**
-
-Preview is the longer-term network environment for testing release candidates
-and expanded test scenarios. Preview is meant for DApps, stake pool operators
-(SPOs), and exchanges who wish to test mature release candidates.
-
-[**Preview configurations**](https://book.world.dev.cardano.org/environments.html#preview-testnet)
-
-### Late-stage testing networks
-
-**Pre-production**
-
-Pre-production is the most mature network for testing purposes, which resembles
-a production (mainnet) environment. It is meant for exchanges, SPOs,
-pre-deployment DApps, and wallets that wish to test release functionality before
-deploying on mainnet.
-
-[**Pre-production configurations**](https://book.world.dev.cardano.org/environments.html#pre-production-testnet)
-
-**Production network (mainnet)**
-
-Production is the live network, also referred to as mainnet. It features
-official functionality releases. Exchanges, SPOs, DApps, wallets, and end users
-can use the mainnet for development, transaction processing, and other needs.
-
-[**Production configurations**](https://book.world.dev.cardano.org/environments.html#production-mainnet)
 
 ## Working with the Cardano testnets
 
@@ -115,7 +72,6 @@ use the `--testnet-magic INTEGER` flag instead.
 
 `INTEGER` indicates the number of the testnet:
 
-- Vasil devnet integer is `9`
 - Preview integer is `2`
 - Pre-production integer is `1`
 
@@ -157,11 +113,15 @@ For more commands, see:
 
 - [Creating keys and addresses](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/stake-pool-operations/3_keys_and_addresses.md)
 
+:::note
+
 Note to use the `--testnet-magic INTEGER` flag instead of `--mainnet`.
+
+:::
 
 ### Funding the address using a faucet
 
-To fund your testnet address, go to the testnet faucet and request some test
+To fund your testnet address, go to the testnets faucet and request some test
 ada:
 
 - [The testnet faucet](/cardano-testnets/tools/faucet)
@@ -176,6 +136,5 @@ run the following command to fund your address:
 You’re now ready to create, sign, and submit transactions on testnets. See the
 tutorial:
 
-- [Building and signing transactions](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/reference/building-and-signing-tx.md)
+- [Building and signing transactions.](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/reference/building-and-signing-tx.md)
 
-Note to use the `--testnet-magic INTEGER` flag instead of `--mainnet`.
