--- a/docs/06-cardano-testnets/07-resources.mdx
+++ b/docs/06-cardano-testnets/07-resources.mdx
@@ -44,5 +44,9 @@ posts which you may find helpful:
 - [Plutus Pioneers program notes](https://plutus-pioneer-program.readthedocs.io/en/latest/plutus_pioneer_program.html)
 - [Developer resources on Essential Cardano](https://www.essentialcardano.io/developer)
 
+:::tip
+
 If you have produced material and would like to contribute your content for
 inclusion on this page, please raise a pull request.
+
+:::
