--- a/docs/02-new-to-cardano/02-what-is-a-cryptocurrency.mdx
+++ b/docs/02-new-to-cardano/02-what-is-a-cryptocurrency.mdx
@@ -38,7 +38,12 @@ value (whether defined by the community, market state, or self-governed entity).
 A token can be fungible (interchangeable) or non-fungible (unique), and act as a
 payment unit, reward, trading asset, or information holder.
 
-#### Related Topics
+:::info
+
+Related topics:
 
 - [Cardano monetary policy](/explore-cardano/monetary-policy)
-- [Learn about native tokens](/native-tokens/learn)
+- [Learn about native tokens](/native-tokens/learn).
+
+:::
+
