Add Lace to wallets

--- a/docs/02-new-to-cardano/08-types-of-wallets.mdx
+++ b/docs/02-new-to-cardano/08-types-of-wallets.mdx
@@ -105,6 +105,7 @@ See
 
 **Other options**
 
+- [Lace](https://www.lace.io/)
 - [Nami](https://namiwallet.io/) 
 - [Eternl](https://eternl.io/app/mainnet/welcome)
 - [GeroWallet](https://gerowallet.io/)
