--- a/docs/02-new-to-cardano/09-how-to-delegate.mdx
+++ b/docs/02-new-to-cardano/09-how-to-delegate.mdx
@@ -20,9 +20,10 @@ Note that you can spend your ada at any time, regardless of how you delegated it
 
 :::
 
-Ada holders can delegate their stake using Daedalus, Yoroi, or other ecosystem wallets. Here are
+Ada holders can delegate their stake using different ecosystem wallets that support this functionality. Here are
 some useful articles to review:
 
+- [How to stake your ada](https://www.essentialcardano.io/infographic/how-to-stake-your-ada)
 - [How to choose a stake pool](https://iohk.zendesk.com/hc/en-us/articles/900002174303-How-to-choose-a-stake-pool)
 - [How safe is it to delegate to a stake pool?](https://iohk.zendesk.com/hc/en-us/articles/900002046123-How-safe-is-it-to-delegate-to-a-stake-pool-)
 - [How to delegate to a stake pool](https://iohk.zendesk.com/hc/en-us/articles/900005718683-How-to-Delegate-to-a-stake-pool)
