--- a/docs/02-new-to-cardano/10-what-is-a-smart-contract.mdx
+++ b/docs/02-new-to-cardano/10-what-is-a-smart-contract.mdx
@@ -33,10 +33,12 @@ contracts using different programming languages. Here are some examples:
 
 Discover more ecosystem [builder tools here.](https://developers.cardano.org/tools)
 
-:::
-
-## Further reading and related topics
+Further reading and related topics:
 
 - [Developer Portal - smart contracts overview](https://developers.cardano.org/docs/smart-contracts/)
 - [A list of community-built developer tools on Cardano](https://www.essentialcardano.io/article/a-list-of-community-built-developer-tools-on-cardano)
+
+:::
+
+
 
