--- a/docs/03-learn/05-pledging-rewards.mdx
+++ b/docs/03-learn/05-pledging-rewards.mdx
@@ -3,8 +3,6 @@ title: Pledging and rewards
 metaTitle: Pledging and rewards
 ---
 
-## Pledging 
-
 Pledging is an important mechanism that encourages the growth of a healthy
 ecosystem within the Cardano blockchain. When you register a stake pool you can
 choose to pledge some, or all, of your ada to the pool, to make it more
@@ -20,7 +18,7 @@ During each epoch, rewards are distributed amongst all stakeholders who have del
 * All transaction fees: collated from the set of transactions included in a block that was minted during that epoch.
 * Monetary expansion: involves distinguishing between the total supply of ada and the maximal supply of ada. The total supply consists of all ada currently in circulation, plus the ada in the treasury. The maximal supply is the maximal amount of ada that can ever exist. The difference between these two figures is called the *reserve*. During each epoch, a fixed but parameterizable percentage of the remaining reserve is taken from the reserve and used for epoch rewards and treasury, where the amount being sent to the treasury is a fixed percentage of the amount taken from the reserve.
 
-Learn more about rewards sharing in the [Rewards sharing and pledge on Cardano video](https://www.youtube.com/watch?v=EAzyN3H8MOA&t=7s). 
+Learn more about rewards sharing in the [rewards sharing and pledge on Cardano video](https://www.youtube.com/watch?v=EAzyN3H8MOA&t=7s). 
 
 The following formula outlines how the reward mechanism works. The available rewards amount, transaction fees, plus monetary expansion, are denoted by R.
 First, the share of all available rewards that a specific pool can receive is determined, as follows:
