--- a/docs/03-learn/04-delegation.mdx
+++ b/docs/03-learn/04-delegation.mdx
@@ -19,6 +19,12 @@ Stake delegation gives rise to *stake pools* that act similarly to
 mining pools in the Bitcoin protocol. Stake pool operators (SPOs) *must* be online 
 to generate blocks if they are selected as slot leaders.
 
+There are three options ada holders can consider for delegating their stake:
+
+1. Run their own stake pool
+2. Agree with a third party to run a private stake pool for them
+3. Delegate to other stake pools.
+
 ## Stake delegation requirements
 
 Delegating stake requires posting two certificates to the chain: a staking
@@ -66,3 +72,14 @@ After receiving the initial funds, the user can then participate in staking, by
 posting a staking key registration certificate, and a delegation
 certificate for their staking key. Once the key is registered, newly created
 addresses can be pointer addresses to the staking key registration certificate.
+
+:::info
+
+Related topics:
+
+- [Operating a stake pool](https://developers.cardano.org/docs/operate-a-stake-pool/)
+- [Advice for stakeholders - delegators and stake pool operators](https://iohk.io/en/blog/posts/2020/11/13/the-general-perspective-on-staking-in-cardano/)
+- [How to stake your ada](https://www.essentialcardano.io/infographic/how-to-stake-your-ada)
+
+:::
+
